[package]
name = "js8-net-control"
version = "0.1.0"
authors = ["Kyle Brandon <kyle@brandfam.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.*"
log = "0.4"
log4rs = "1.0.0"
rocket = "0.5.0-rc.1"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
redis = "*"
js8event = { path = "../js8event" }
tokio = { version = "*", features = ["full"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]
